java/java-tests/testData/codeInsight/daemonCodeAnalyzer/implicitClass/ImplicitClassConstructorNoParam.java
void main(String[] args) {
  System.out.println("AAAAA");
}

<error descr="Explicit constructor in implicitly declared class of a compact source file is not allowed">public ImplicitClassConstructorNoParam()</error> {
  System.out.println("BBBBB");
}